working turn flow
now with somewhat better architecture still far from perfect but we should soon focus now on implementing cards instead of turnlogic